# Proyecto-Final-GeoComp

./: CMakeLists.txt  README.md
data/: ato.off  pickachu_m_quad.off  pickachu_s_quad.off  simpleSquare.off  simpleSquare_quad.off
include/TriangleToQuadConverter/: OFFManager.h  TriangleToQuadConverter.h
src/: OFFManager.cpp  TriangleToQuadConverter.cpp  main.cpp
